mdapipkg/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__EffectiveDate__c</fullName>
        <description>If supplied, this Price Book will only be used for the organization and account segment levels on and after the date (until a later effective date becomes active for the level).</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsCurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this Price Book is effective as the organization or segment default price book in a price book hierarchy.</description>
        <inlineHelpText>If true, this Price Book is effective as the organization or segment default price book in a price book hierarchy.</inlineHelpText>
        <label>Effective In Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsOrganizationDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this Price Book will be used as the organization level price book.</description>
        <label>Organization Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Segment__c</fullName>
        <description>The pricing segment that this Price Book defines. This will determine Account product availability and pricing.</description>
        <label>Price Book Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KGRenewal__PriceBookSegment</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>